styles.css
lc {
    width: 90%;
    height: 90%;
    background-color:rgb(25, 25, 25);
    text-align: center;
    color: white;
    border-radius: 25px;
    font-family: Andale Mono, monospace;
    font-size: xx-large;
    font-weight: bold;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
}

.count {
    background-color:rgb(25, 25, 25);
    color: white;
    font-family: Andale Mono, monospace;
    font-size: 200px;
    font-weight: bold;
}

.flcount {
  margin-top: 95px;
}

.countD {
  font-size: 100px;
  padding-bottom: 25px;
}

.switch {
  flex-direction: column;
}

li {
    width: 200px;
    height: 200px;
    background-color:rgb(25, 25, 25);
    text-align: center;
    color: white;
    border-radius: 25px;
    margin-left: 20px;
    margin-right: 20px;
    font-family: Andale Mono, monospace;
    font-size: xx-large;
    font-weight: bold;
}

fl {
    display: flex;
    list-style: none;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

.title {
    width: 600px;
    height: 600px;
}

.login {
    width: 1000px;
    height: 600px;
}

/*BUTTON*/
.button-78 {
  align-items: center;
  appearance: none;
  background-clip: padding-box;
  background-color: initial;
  background-image: none;
  border-style: none;
  box-sizing: border-box;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  flex-direction: row;
  flex-shrink: 0;
  font-family: Eina01,sans-serif;
  font-weight: 800;
  justify-content: center;
  line-height: 24px;
  margin: 15px;
  min-height: 64px;
  outline: none;
  overflow: visible;
  padding: 100px;
  pointer-events: auto;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  vertical-align: middle;
  width: auto;
  word-break: keep-all;
  z-index: 0;
}

.button-78:before,
.button-78:after {
  border-radius: 200px;
}

.button-78:before {
  content: "";
  display: block;
  height: 100%;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -2;
}

.green{
  padding: 30px;
  font-size: x-large;
}

.blue:before {
  background-image: linear-gradient(92.83deg, #26e2ff 0, #0db2ff 100%);
}

.green:before {
  background-image: linear-gradient(92.83deg, #0fff2f 0, #0fff73 100%);
}

.red:before {
  background-image: linear-gradient(92.83deg, #ff0f0f 0, #ff530f 100%);
}

.purple:before {
  background-image: linear-gradient(92.83deg, #830fff 0, #b30fff 100%);
}

.blue:after {
  background-image: linear-gradient(#0f5863 0, #0c0d0d 100%);
}

.green:after {
  background-image: linear-gradient(#0f6e1c 0, #0c0d0d 100%);
}

.red:after {
  background-image: linear-gradient(#661010 0, #0c0d0d 100%);
}

.purple:after {
  background-image: linear-gradient(#380f63 0, #0c0d0d 100%);
}

.blue:active:not(:disabled):before {
  background-image: linear-gradient(0deg, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), linear-gradient(92.83deg, #26e2ff 0, #0db2ff 100%);
}

.green:active:not(:disabled):before {
  background-image: linear-gradient(0deg, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), linear-gradient(92.83deg, #0fff2f 0, #0fff73 100%);
}

.red:active:not(:disabled):before {
  background-image: linear-gradient(0deg, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), linear-gradient(92.83deg, #ff0f0f 0, #ff530f 100%);
}

.purple:active:not(:disabled):before {
  background-image: linear-gradient(0deg, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), linear-gradient(92.83deg, #830fff 0, #b30fff 100%);
}

.blue:active:not(:disabled):after {
  background-image: linear-gradient(#0f5863 0, #0c0d0d 100%);
}

.green:active:not(:disabled):after {
  background-image: linear-gradient(#0f6e1c 0, #0c0d0d 100%);
}

.red:active:not(:disabled):after {
  background-image: linear-gradient(#661010 0, #0c0d0d 100%);
}

.purple:active:not(:disabled):after {
  background-image: linear-gradient(#380f63 0, #0c0d0d 100%);
}

.button-78:after {
  background-color: initial;
  bottom: 4px;
  content: "";
  display: block;
  left: 4px;
  overflow: hidden;
  position: absolute;
  right: 4px;
  top: 4px;
  transition: all 100ms ease-out;
  z-index: -1;
}

.button-78:hover:not(:disabled):after {
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
  transition-timing-function: ease-in;
  opacity: 0;
}

.button-78:active:not(:disabled) {
  color: #ccc;
}

.button-78:active:not(:disabled):after {
  bottom: 4px;
  left: 4px;
  right: 4px;
  top: 4px;
}

.button-78:disabled {
  cursor: default;
  opacity: .24;
}

/*SWITCH*/
.check {
  --s: 50px; /* adjust this to control the size*/
  
  height: calc(var(--s) + var(--s)/5);
  width: auto; /* some browsers need this */
  aspect-ratio: 2.25;
  border-radius: var(--s);
  margin: calc(var(--s)/2);
  display: grid;
  cursor: pointer;
  background-color:#ff7a7a;
  box-sizing: content-box;
  overflow: hidden;
  transition: .3s .1s;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
}
.blueC {
  background-color:#a1e1ff;
}
.greenC {
  background-color:#a2ffaf;
}
.redC {
  background-color:#ff9a9a;
}
.purpleC {
  background-color:#f395ff;
}
input:before{
  content: "";
  padding: calc(var(--s)/10);
  --_g: radial-gradient(circle closest-side at calc(100% - var(--s)/2) 50%,#000 96%,#0000);
  background: 
    var(--_g) 0 /var(--_p,var(--s)) 100% no-repeat content-box,
    var(--_g) var(--_p,0)/var(--s)  100% no-repeat content-box,
    #fff;
  mix-blend-mode: darken;
  filter: blur(calc(var(--s)/12)) contrast(11);
  transition: .4s, background-position .4s .1s,
    padding cubic-bezier(0,calc(var(--_i,-1)*200),1,calc(var(--_i,-1)*200)) .25s .1s;
}
.blueC:checked {
  background-color:#00aeff;
}
.greenC:checked {
  background-color:#00ff22;
}
.redC:checked {
  background-color:#ff0000;
}
.purpleC:checked {
  background-color:#e100ff;
}
input:checked:before {
  padding: calc(var(--s)/10 + .05px) calc(var(--s)/10);
  --_p: 100%;
  --_i: 1;
}

body {
  background:#15202a;
  margin:0;
  height:100vh;
  display:grid;
  place-content:center;
  place-items:center;
}

.disabled-btn {
  pointer-events: none;
  opacity: 0.3;
}

/*INPUT*/
.inputL {
  font-size: 14px;
  border-radius: 6px;
  line-height: 1.5;
  transition: box-shadow 100ms ease-in, border 100ms ease-in, background-color 100ms ease-in;
  border: 2px solid rgb(40, 40, 40);
  color: white;
  background: rgb(25, 25, 25);
  display: block;
  height: 36px;
  display: block;
  margin-right: auto;
  margin-left: auto;
  margin-top: 10px;
}
.inputL:hover {
    border-color: #5c5c5c;
}
.inputL:focus{
    border-color: #9147ff;
    background: rgb(25, 25, 25);
}


/*MOBILE*/
@media (max-width: 600px) {
  .title {
    width: 300px;
    height: 300px;
  } 

  .login {
    width: 300px;
    height: 700px;
  }

  .count {
    background-color:rgb(25, 25, 25);
    color: white;
    font-family: Andale Mono, monospace;
    font-size: 100px;
    font-weight: bold;
  }

  input {
    --s: 40px;
  }

  .switch {
    flex-direction: row;
  }

  .countD {
    font-size: 50px;
    padding-bottom: 13px;
  }

  .flcount {
    margin-top: 35px;
  }
}

